test/corpus/term/binary.txt
================================================================================
empty binary
================================================================================

<<>>.

--------------------------------------------------------------------------------

(source_file
  (binary))

================================================================================
simple binary
================================================================================

<<10, 20>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer))
    (bin_element
      (integer))))

================================================================================
binary with bit sizes
================================================================================

<<1:1, 0:1>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer)))
    (bin_element
      (integer)
      (bit_size_expr
        (integer)))))

================================================================================
binary with characters
================================================================================

<<$a, $b, $c>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (char))
    (bin_element
      (char))
    (bin_element
      (char))))

================================================================================
binary with integer type
================================================================================

<<42/integer>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_type_list
        (atom)))))

================================================================================
binary with size and integer type
================================================================================

<<42:16/integer>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)))))

================================================================================
binary with float type
================================================================================

<<2.3/float>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (float)
      (bit_type_list
        (atom)))))

================================================================================
binary with string
================================================================================

<<"ABC">>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (string))))

================================================================================
binary with utf8 string
================================================================================

<<"ABC"/utf8>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (string)
      (bit_type_list
        (atom)))))

================================================================================
binary with utf16 string
================================================================================

<<"ABC"/utf16>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (string)
      (bit_type_list
        (atom)))))

================================================================================
binary with utf32 string
================================================================================

<<"ABC"/utf32>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (string)
      (bit_type_list
        (atom)))))

================================================================================
binary with multiple type specifiers
================================================================================

<<2.3/unsigned-big-float>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (float)
      (bit_type_list
        (atom)
        (atom)
        (atom)))))

================================================================================
binary with unit specifier
================================================================================

<<42:16/signed-little-unit:2-integer>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)
        (atom)
        (bit_type_unit
          (integer))
        (atom)))))

================================================================================
binary type
================================================================================

<<1:1/binary>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)))))

================================================================================
bytes type
================================================================================

<<2:2/bytes>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)))))

================================================================================
bitstring type
================================================================================

<<3:3/bitstring>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)))))

================================================================================
bits type
================================================================================

<<4:4/bits>>.

--------------------------------------------------------------------------------

(source_file
  (binary
    (bin_element
      (integer)
      (bit_size_expr
        (integer))
      (bit_type_list
        (atom)))))

================================================================================
binary pattern match
================================================================================

<<A, B, C:16>> = <<1, 17, 42:16>>.

--------------------------------------------------------------------------------

(source_file
  (match_expr
    (binary
      (bin_element
        (var))
      (bin_element
        (var))
      (bin_element
        (var)
        (bit_size_expr
          (integer))))
    (binary
      (bin_element
        (integer))
      (bin_element
        (integer))
      (bin_element
        (integer)
        (bit_size_expr
          (integer))))))

================================================================================
binary with rest match
================================================================================

<<Head, Rest/binary>> = <<1, 2, 3>>.

--------------------------------------------------------------------------------

(source_file
  (match_expr
    (binary
      (bin_element
        (var))
      (bin_element
        (var)
        (bit_type_list
          (atom))))
    (binary
      (bin_element
        (integer))
      (bin_element
        (integer))
      (bin_element
        (integer)))))
