test/corpus/term/float.txt
================================================================================
simple float
================================================================================

2.3.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
float with exponent
================================================================================

2.3e3.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
float with negative exponent
================================================================================

2.3e-3.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
float with positive exponent
================================================================================

2.3e+3.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
float with underscores
================================================================================

1_234.333_333.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
float with uppercase E
================================================================================

1.5E10.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
negative float
================================================================================

-3.14.

--------------------------------------------------------------------------------

(source_file
  (unary_op_expr
    (float)))

================================================================================
based float (EEP-75)
================================================================================

16#1.Fp10.

--------------------------------------------------------------------------------

(source_file
  (float))

================================================================================
based float with underscores (EEP-75)
================================================================================

16#1_2.A_B#e10.

--------------------------------------------------------------------------------

(source_file
  (float))
